--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "drizzle-orm": "^0.44.2",
     "fastify": "^5.3.3",
     "pg": "^8.16.0"
